--- a/Customer/src/main/resources/MenuBarGrilled.fxml
+++ b/Customer/src/main/resources/MenuBarGrilled.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.FlowPane?>
 
 
-<AnchorPane fx:id="anchorPaneMain" prefHeight="570.0" prefWidth="828.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="views.MenuBarView">
+<AnchorPane fx:id="anchorPaneMain" prefHeight="570.0" prefWidth="828.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="views.MenuBarGrilledView">
    <children>
       <FlowPane fx:id="flowPaneMenu" layoutX="14.0" layoutY="14.0" prefHeight="544.0" prefWidth="803.0">
          <children>
