--- a/Customer/src/main/resources/MenuView.fxml
+++ b/Customer/src/main/resources/MenuView.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
+<?import javafx.scene.control.ScrollPane?>
 <AnchorPane fx:id="menuLayout" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="views.MenuView">
     <fx:define>
         <fx:include fx:id="menuBarGrilled"      source="MenuBarGrilled.fxml" />
@@ -28,7 +29,9 @@
       </AnchorPane>
       <TabPane fx:id="tabPaneMenu" layoutY="56.0" prefHeight="664.0" prefWidth="828.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
-          <Tab fx:id="GrilledTab"       closable="false" text="Grilled"         content="$menuBarGrilled"/>
+            <Tab fx:id="GrilledTab"     closable="false" text="Grilled" >
+                <ScrollPane fx:id="scrollGrilled"  content="$menuBarGrilled"/>
+            </Tab>
           <Tab fx:id="DelicatessenTab"  closable="false" text="Delicatessen"    content="$menuBarDelicatessen"/>
           <Tab fx:id="DessertTab"       closable="false" text="Dessert"         content="$menuBarDessert"/>
           <Tab fx:id="BeverageTab"      closable="false" text="Beverage"        content="$menuBarBeverage"/>
