--- a/Customer/src/main/resources/MenuView.fxml
+++ b/Customer/src/main/resources/MenuView.fxml
@@ -1,27 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<?import javafx.scene.control.ScrollPane?>
 <AnchorPane fx:id="menuLayout" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="views.MenuView">
     <fx:define>
-        <!--<fx:include fx:id="menuBarGrilled"      source="MenuBarGrilled.fxml" />-->
-        <!--<fx:include fx:id="menuBarDelicatessen" source="MenuBarDelicatessen.fxml" />-->
-        <!--<fx:include fx:id="menuBarDessert"      source="MenuBarDessert.fxml" />-->
-        <!--<fx:include fx:id="menuBarBeverage"     source="MenuBarBeverage.fxml" />-->
-        <fx:include fx:id="menuBarGrilled"      source="MenuBar.fxml" />
+        <fx:include fx:id="menuBarGrilled" source="MenuBar.fxml" />
         <fx:include fx:id="menuBarDelicatessen" source="MenuBar.fxml" />
-        <fx:include fx:id="menuBarDessert"      source="MenuBar.fxml" />
-        <fx:include fx:id="menuBarBeverage"     source="MenuBar.fxml" />
+        <fx:include fx:id="menuBarDessert" source="MenuBar.fxml" />
+        <fx:include fx:id="menuBarBeverage" source="MenuBar.fxml" />
     </fx:define>
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffc337" height="57.0" stroke="#fffbfb" strokeType="INSIDE" strokeWidth="0.0" width="1280.0" />
-      <AnchorPane layoutX="827.0" layoutY="57.0" prefHeight="664.0" prefWidth="453.0">
+      <AnchorPane layoutX="827.0" layoutY="57.0" prefHeight="664.0" prefWidth="436.0">
          <children>
             <Label layoutX="160.0" layoutY="14.0" text="Order Result">
                <font>
@@ -29,17 +26,23 @@
                </font>
             </Label>
             <AnchorPane fx:id="tableLayout" layoutX="15.0" layoutY="49.0" prefHeight="557.0" prefWidth="419.0" />
+            <Button fx:id="btnConfirm" layoutX="194.0" layoutY="622.0" mnemonicParsing="false" text="Confirm" />
          </children>
       </AnchorPane>
       <TabPane fx:id="tabPaneMenu" layoutY="56.0" prefHeight="664.0" prefWidth="828.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
-            <Tab fx:id="GrilledTab"     closable="false" text="Grilled" >
-                <ScrollPane fx:id="scrollGrilled"  content="$menuBarGrilled"/>
+            <Tab fx:id="GrilledTab" closable="false" text="Grilled">
+                <ScrollPane fx:id="scrollGrilled" content="$menuBarGrilled"/>
             </Tab>
-          <Tab fx:id="DelicatessenTab"  closable="false" text="Delicatessen"    content="$menuBarDelicatessen"/>
-          <Tab fx:id="DessertTab"       closable="false" text="Dessert"         content="$menuBarDessert"/>
-          <Tab fx:id="BeverageTab"      closable="false" text="Beverage"        content="$menuBarBeverage"/>
+          <Tab fx:id="DelicatessenTab" closable="false" text="Delicatessen" content="$menuBarDelicatessen"/>
+          <Tab fx:id="DessertTab" closable="false" text="Dessert"           content="$menuBarDessert"/>
+          <Tab fx:id="BeverageTab" closable="false" text="Beverage"         content="$menuBarBeverage"/>
         </tabs>
       </TabPane>
+      <Label fx:id="labelPayment" layoutX="1054.0" layoutY="15.0" onMousePressed="#onClickLabelPayment" text="Check payment click here" textAlignment="CENTER" underline="true">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
