--- a/Customer/src/main/resources/MenuView.fxml
+++ b/Customer/src/main/resources/MenuView.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Tab?>
@@ -15,24 +14,25 @@
         <fx:include fx:id="menuBarDelicatessen" source="MenuBar.fxml" />
         <fx:include fx:id="menuBarDessert" source="MenuBar.fxml" />
         <fx:include fx:id="menuBarBeverage" source="MenuBar.fxml" />
+        <fx:include fx:id="orderBar" source="OrderBar.fxml"/>
     </fx:define>
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffc337" height="57.0" stroke="#fffbfb" strokeType="INSIDE" strokeWidth="0.0" width="1280.0" />
-      <AnchorPane layoutX="827.0" layoutY="57.0" prefHeight="664.0" prefWidth="436.0">
-         <children>
-            <Label layoutX="160.0" layoutY="14.0" text="Order Result">
-               <font>
-                  <Font size="24.0" />
-               </font>
-            </Label>
-            <AnchorPane fx:id="tableLayout" layoutX="15.0" layoutY="49.0" prefHeight="557.0" prefWidth="419.0" />
-            <Button fx:id="btnConfirm" layoutX="194.0" layoutY="622.0" mnemonicParsing="false" text="Confirm" />
-         </children>
-      </AnchorPane>
+      <!--<AnchorPane layoutX="827.0" layoutY="57.0" prefHeight="664.0" prefWidth="436.0">-->
+         <!--<children>-->
+            <!--<Label layoutX="160.0" layoutY="14.0" text="Order Result">-->
+               <!--<font>-->
+                  <!--<Font size="24.0" />-->
+               <!--</font>-->
+            <!--</Label>-->
+
+         <!--</children>-->
+      <!--</AnchorPane>-->
+       
       <TabPane fx:id="tabPaneMenu" layoutY="56.0" prefHeight="664.0" prefWidth="828.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
             <Tab fx:id="GrilledTab" closable="false" text="Grilled">
-                <ScrollPane fx:id="scrollGrilled" content="$menuBarGrilled"/>
+                <ScrollPane fx:id="scrollGrilled" fitToHeight="false" content="$menuBarGrilled" />
             </Tab>
           <Tab fx:id="DelicatessenTab" closable="false" text="Delicatessen" content="$menuBarDelicatessen"/>
           <Tab fx:id="DessertTab" closable="false" text="Dessert"           content="$menuBarDessert"/>
@@ -49,5 +49,17 @@
             <Font name="System Bold" size="36.0" />
          </font>
       </Label>
+      <TabPane layoutX="828.0" layoutY="56.0" prefHeight="664.0" prefWidth="452.0" tabClosingPolicy="UNAVAILABLE">
+        <tabs>
+            <Tab text="Order Result" fx:id="orderResultTab" content="$orderBar">
+
+            </Tab>
+          <Tab text="Untitled Tab 2">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+            </content>
+          </Tab>
+        </tabs>
+      </TabPane>
    </children>
 </AnchorPane>
