--- a/Customer/src/main/resources/MenuView.fxml
+++ b/Customer/src/main/resources/MenuView.fxml
@@ -8,58 +8,60 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="menuLayout" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="views.MenuView">
+<AnchorPane fx:id="menuLayout" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.121"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="views.MenuView">
     <fx:define>
-        <fx:include fx:id="menuBarGrilled" source="MenuBar.fxml" />
-        <fx:include fx:id="menuBarDelicatessen" source="MenuBar.fxml" />
-        <fx:include fx:id="menuBarDessert" source="MenuBar.fxml" />
-        <fx:include fx:id="menuBarBeverage" source="MenuBar.fxml" />
-        <fx:include fx:id="orderBar" source="OrderBar.fxml"/>
+        <fx:include fx:id="menuBarGrilled" source="MenuBar.fxml"/>
+        <fx:include fx:id="menuBarDelicatessen" source="MenuBar.fxml"/>
+        <fx:include fx:id="menuBarDessert" source="MenuBar.fxml"/>
+        <fx:include fx:id="menuBarBeverage" source="MenuBar.fxml"/>
     </fx:define>
-   <children>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffc337" height="57.0" stroke="#fffbfb" strokeType="INSIDE" strokeWidth="0.0" width="1280.0" />
-      <!--<AnchorPane layoutX="827.0" layoutY="57.0" prefHeight="664.0" prefWidth="436.0">-->
-         <!--<children>-->
-            <!--<Label layoutX="160.0" layoutY="14.0" text="Order Result">-->
-               <!--<font>-->
-                  <!--<Font size="24.0" />-->
-               <!--</font>-->
-            <!--</Label>-->
+    <children>
+        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffc337" height="57.0" stroke="#fffbfb" strokeType="INSIDE"
+                   strokeWidth="0.0" width="1280.0"/>
+        <!--<AnchorPane layoutX="827.0" layoutY="57.0" prefHeight="664.0" prefWidth="436.0">-->
+        <!--<children>-->
+        <!--<Label layoutX="160.0" layoutY="14.0" text="Order Result">-->
+        <!--<font>-->
+        <!--<Font size="24.0" />-->
+        <!--</font>-->
+        <!--</Label>-->
 
-         <!--</children>-->
-      <!--</AnchorPane>-->
-       
-      <TabPane fx:id="tabPaneMenu" layoutY="56.0" prefHeight="664.0" prefWidth="828.0" tabClosingPolicy="UNAVAILABLE">
-        <tabs>
-            <Tab fx:id="GrilledTab" closable="false" text="Grilled">
-                <ScrollPane fx:id="scrollGrilled" fitToHeight="false" content="$menuBarGrilled" />
-            </Tab>
-          <Tab fx:id="DelicatessenTab" closable="false" text="Delicatessen" content="$menuBarDelicatessen"/>
-          <Tab fx:id="DessertTab" closable="false" text="Dessert"           content="$menuBarDessert"/>
-          <Tab fx:id="BeverageTab" closable="false" text="Beverage"         content="$menuBarBeverage"/>
-        </tabs>
-      </TabPane>
-      <Label fx:id="labelPayment" layoutX="1054.0" layoutY="15.0" onMousePressed="#onClickLabelPayment" text="Check payment click here" textAlignment="CENTER" underline="true">
-         <font>
-            <Font name="System Bold" size="18.0" />
-         </font>
-      </Label>
-      <Label layoutX="24.0" layoutY="17.0" text="Little Bear Buffet" textFill="WHITE">
-         <font>
-            <Font name="System Bold" size="36.0" />
-         </font>
-      </Label>
-      <TabPane layoutX="828.0" layoutY="56.0" prefHeight="664.0" prefWidth="452.0" tabClosingPolicy="UNAVAILABLE">
-        <tabs>
-            <Tab text="Order Result" fx:id="orderResultTab" content="$orderBar">
+        <!--</children>-->
+        <!--</AnchorPane>-->
 
-            </Tab>
-          <Tab text="Untitled Tab 2">
-            <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-            </content>
-          </Tab>
-        </tabs>
-      </TabPane>
-   </children>
+        <TabPane fx:id="tabPaneMenu" layoutY="56.0" prefHeight="664.0" prefWidth="828.0" tabClosingPolicy="UNAVAILABLE">
+            <tabs>
+                <Tab fx:id="GrilledTab" closable="false" text="Grilled">
+                    <ScrollPane fx:id="scrollGrilled" fitToHeight="false" content="$menuBarGrilled"/>
+                </Tab>
+                <Tab fx:id="DelicatessenTab" closable="false" text="Delicatessen" content="$menuBarDelicatessen"/>
+                <Tab fx:id="DessertTab" closable="false" text="Dessert" content="$menuBarDessert"/>
+                <Tab fx:id="BeverageTab" closable="false" text="Beverage" content="$menuBarBeverage"/>
+            </tabs>
+        </TabPane>
+        <Label fx:id="labelPayment" layoutX="1054.0" layoutY="15.0" onMousePressed="#onClickLabelPayment"
+               text="Check payment click here" textAlignment="CENTER" underline="true">
+            <font>
+                <Font name="System Bold" size="18.0"/>
+            </font>
+        </Label>
+        <Label layoutX="24.0" layoutY="17.0" text="Little Bear Buffet" textFill="WHITE">
+            <font>
+                <Font name="System Bold" size="36.0"/>
+            </font>
+        </Label>
+        <TabPane layoutX="828.0" layoutY="56.0" prefHeight="664.0" prefWidth="452.0" tabClosingPolicy="UNAVAILABLE">
+            <tabs>
+                <Tab text="Order Result" fx:id="orderResultTab">
+
+                </Tab>
+                <Tab text="Untitled Tab 2">
+                    <content>
+                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0"/>
+                    </content>
+                </Tab>
+            </tabs>
+        </TabPane>
+    </children>
 </AnchorPane>
