--- a/Customer/src/main/resources/MenuView.fxml
+++ b/Customer/src/main/resources/MenuView.fxml
@@ -19,20 +19,10 @@
     <children>
         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffc337" height="57.0" stroke="#fffbfb" strokeType="INSIDE"
                    strokeWidth="0.0" width="1280.0"/>
-        <!--<AnchorPane layoutX="827.0" layoutY="57.0" prefHeight="664.0" prefWidth="436.0">-->
-        <!--<children>-->
-        <!--<Label layoutX="160.0" layoutY="14.0" text="Order Result">-->
-        <!--<font>-->
-        <!--<Font size="24.0" />-->
-        <!--</font>-->
-        <!--</Label>-->
-
-        <!--</children>-->
-        <!--</AnchorPane>-->
 
         <TabPane fx:id="tabPaneMenu" layoutY="56.0" prefHeight="664.0" prefWidth="828.0" tabClosingPolicy="UNAVAILABLE">
             <tabs>
-                <Tab fx:id="GrilledTab" closable="false" text="Grilled">
+                <Tab fx:id="GrilledTab" closable="false" text="Grilled" >
                     <ScrollPane fx:id="scrollGrilled" fitToHeight="false" content="$menuBarGrilled"/>
                 </Tab>
                 <Tab fx:id="DelicatessenTab" closable="false" text="Delicatessen" content="$menuBarDelicatessen"/>
@@ -40,22 +30,26 @@
                 <Tab fx:id="BeverageTab" closable="false" text="Beverage" content="$menuBarBeverage"/>
             </tabs>
         </TabPane>
+
         <Label fx:id="labelPayment" layoutX="1054.0" layoutY="15.0" onMousePressed="#onClickLabelPayment"
                text="Check payment click here" textAlignment="CENTER" underline="true">
             <font>
                 <Font name="System Bold" size="18.0"/>
             </font>
         </Label>
+
         <Label layoutX="24.0" layoutY="17.0" text="Little Bear Buffet" textFill="WHITE">
             <font>
                 <Font name="System Bold" size="36.0"/>
             </font>
         </Label>
-        <TabPane layoutX="828.0" layoutY="56.0" prefHeight="664.0" prefWidth="452.0" tabClosingPolicy="UNAVAILABLE">
+
+        <TabPane fx:id="tabOrderBar" layoutX="828.0" layoutY="56.0" prefHeight="664.0" prefWidth="452.0" tabClosingPolicy="UNAVAILABLE">
             <tabs>
                 <Tab text="Order Result" fx:id="orderResultTab"/>
-                <Tab text="Ordered" fx:id="orderedTab"/>
-            </tabs>
+            <Tab text="Ordered" fx:id="orderedTab"/>
+        </tabs>
         </TabPane>
+
     </children>
 </AnchorPane>
