--- a/Cashier/src/main/resources/CashierMainView.fxml
+++ b/Cashier/src/main/resources/CashierMainView.fxml
@@ -1,16 +1,149 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.text.Font?>
-
 
 <AnchorPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Button fx:id="btn_1" layoutX="640.0" layoutY="174.0" mnemonicParsing="false" prefHeight="175.0" prefWidth="203.0" text="1">
+      <FlowPane layoutX="976.0" layoutY="315.0" prefHeight="316.0" prefWidth="302.0">
+         <children>
+            <Button fx:id="btn_6" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" text="6">
+               <font>
+                  <Font size="36.0" />
+               </font>
+            </Button>
+            <Button fx:id="btn_7" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" text="7">
+               <font>
+                  <Font size="36.0" />
+               </font>
+            </Button>
+            <Button fx:id="btn_8" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" text="8">
+               <font>
+                  <Font size="36.0" />
+               </font>
+            </Button>
+            <Button fx:id="btn_9" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" text="9">
+               <font>
+                  <Font size="36.0" />
+               </font>
+            </Button>
+            <Button fx:id="btn_4" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" text="4">
+               <font>
+                  <Font size="36.0" />
+               </font>
+            </Button>
+            <Button fx:id="btn_5" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" text="5">
+               <font>
+                  <Font size="36.0" />
+               </font>
+            </Button>
+            <Button fx:id="btn_1" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" text="1">
+               <font>
+                  <Font size="36.0" />
+               </font>
+            </Button>
+            <Button fx:id="btn_2" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" text="2">
+               <font>
+                  <Font size="36.0" />
+               </font>
+            </Button>
+            <Button fx:id="btn_3" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" text="3">
+               <font>
+                  <Font size="36.0" />
+               </font>
+            </Button>
+            <Button fx:id="btn_0" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" text="0">
+               <font>
+                  <Font size="36.0" />
+               </font>
+            </Button>
+            <Button fx:id="btn_dot" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" text=".">
+               <font>
+                  <Font size="36.0" />
+               </font>
+            </Button>
+            <Button fx:id="btn_delete" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0">
+               <font>
+                  <Font size="36.0" />
+               </font>
+            </Button>
+         </children>
+      </FlowPane>
+      <Label layoutX="23.0" layoutY="14.0" text="Little Bear Cashier">
          <font>
-            <Font size="72.0" />
+            <Font size="36.0" />
          </font>
-      </Button>
+      </Label>
+      <Label layoutX="23.0" layoutY="91.0" text="Table No:">
+         <font>
+            <Font size="36.0" />
+         </font>
+      </Label>
+      <ComboBox fx:id="cb_table" layoutX="331.0" layoutY="95.0" prefHeight="44.0" prefWidth="278.0" />
+      <Label layoutX="23.0" layoutY="178.0" text="People Amount:">
+         <font>
+            <Font size="36.0" />
+         </font>
+      </Label>
+      <Label fx:id="lb_peopleAmt" layoutX="331.0" layoutY="178.0" text="2">
+         <font>
+            <Font size="36.0" />
+         </font>
+      </Label>
+      <Label layoutX="23.0" layoutY="265.0" text="Total Price:">
+         <font>
+            <Font size="36.0" />
+         </font>
+      </Label>
+      <Label fx:id="lb_totalPrice" layoutX="331.0" layoutY="265.0" text="200 Baht.">
+         <font>
+            <Font size="36.0" />
+         </font>
+      </Label>
+      <Label layoutX="109.0" layoutY="354.0" text="Each:">
+         <font>
+            <Font size="36.0" />
+         </font>
+      </Label>
+      <Label fx:id="lb_eachPrice" layoutX="325.0" layoutY="354.0" text="200 Baht.">
+         <font>
+            <Font size="36.0" />
+         </font>
+      </Label>
+      <Label layoutX="16.0" layoutY="431.0" text="Received Money:">
+         <font>
+            <Font size="36.0" />
+         </font>
+      </Label>
+      <Label layoutX="26.0" layoutY="571.0" text="Change Money:">
+         <font>
+            <Font size="36.0" />
+         </font>
+      </Label>
+      <TextField fx:id="tf_receive" alignment="CENTER_RIGHT" layoutX="325.0" layoutY="419.0" prefHeight="77.0" prefWidth="367.0">
+         <font>
+            <Font size="36.0" />
+         </font>
+      </TextField>
+      <TextField fx:id="tf_change" alignment="CENTER_RIGHT" editable="false" layoutX="325.0" layoutY="559.0" prefHeight="77.0" prefWidth="367.0">
+         <font>
+            <Font size="36.0" />
+         </font>
+      </TextField>
+      <Label layoutX="709.0" layoutY="576.0" text="Baht.">
+         <font>
+            <Font size="36.0" />
+         </font>
+      </Label>
+      <Label layoutX="709.0" layoutY="436.0" text="Baht.">
+         <font>
+            <Font size="36.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
