--- a/Cashier/src/main/resources/CashierMainView.fxml
+++ b/Cashier/src/main/resources/CashierMainView.fxml
@@ -8,7 +8,8 @@
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #fffbfb;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #fffbfb;" xmlns="http://javafx.com/javafx/9.0.1"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="views.CashierMainView">
    <children>
       <FlowPane layoutX="976.0" layoutY="315.0" prefHeight="316.0" prefWidth="302.0">
          <children>
