--- a/Cashier/src/main/resources/CashierMainView.fxml
+++ b/Cashier/src/main/resources/CashierMainView.fxml
@@ -79,18 +79,18 @@
             <Font size="48.0" />
          </font>
       </Label>
-      <Label layoutX="23.0" layoutY="91.0" text="Table No:">
+      <Label layoutX="23.0" layoutY="132.0" text="Table No:">
          <font>
             <Font size="36.0" />
          </font>
       </Label>
-      <ComboBox fx:id="cb_table" layoutX="210.0" layoutY="95.0" prefHeight="44.0" prefWidth="167.0" />
-      <Label layoutX="547.0" layoutY="167.0" text="People Amount:">
+      <ComboBox fx:id="cb_table" layoutX="211.0" layoutY="120.0" prefHeight="77.0" prefWidth="219.0" style="-fx-font-size: 36;" />
+      <Label layoutX="547.0" layoutY="169.0" text="People Amount:">
          <font>
             <Font size="36.0" />
          </font>
       </Label>
-      <Label fx:id="lb_peopleAmt" layoutX="865.0" layoutY="167.0" text="2">
+      <Label fx:id="lb_peopleAmt" layoutX="865.0" layoutY="169.0" text="2">
          <font>
             <Font size="36.0" />
          </font>
@@ -145,12 +145,12 @@
             <Font size="36.0" />
          </font>
       </Label>
-      <Label layoutX="547.0" layoutY="91.0" text="Package:">
+      <Label layoutX="547.0" layoutY="93.0" text="Package:">
          <font>
             <Font size="36.0" />
          </font>
       </Label>
-      <Label fx:id="lb_package" layoutX="865.0" layoutY="91.0" text="Panda">
+      <Label fx:id="lb_package" layoutX="865.0" layoutY="93.0" text="Panda">
          <font>
             <Font size="36.0" />
          </font>
