--- a/Cashier/src/main/resources/CashierMainView.fxml
+++ b/Cashier/src/main/resources/CashierMainView.fxml
@@ -8,66 +8,66 @@
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #fffbfb;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="views.CashierMainView">
+<AnchorPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="views.CashierMainView">
    <children>
-      <FlowPane layoutX="976.0" layoutY="315.0" prefHeight="316.0" prefWidth="302.0">
+      <FlowPane layoutX="916.0" layoutY="235.0" prefHeight="483.0" prefWidth="360.0">
          <children>
-            <Button fx:id="btn_7" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" text="7">
+            <Button fx:id="btn_7" mnemonicParsing="false" prefHeight="120.0" prefWidth="120.0" text="7">
                <font>
                   <Font size="36.0" />
                </font>
             </Button>
-            <Button fx:id="btn_8" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" text="8">
+            <Button fx:id="btn_8" mnemonicParsing="false" prefHeight="120.0" prefWidth="120.0" text="8">
                <font>
                   <Font size="36.0" />
                </font>
             </Button>
-            <Button fx:id="btn_9" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" text="9">
+            <Button fx:id="btn_9" mnemonicParsing="false" prefHeight="120.0" prefWidth="120.0" text="9">
                <font>
                   <Font size="36.0" />
                </font>
             </Button>
-            <Button fx:id="btn_4" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" text="4">
+            <Button fx:id="btn_4" mnemonicParsing="false" prefHeight="120.0" prefWidth="120.0" text="4">
                <font>
                   <Font size="36.0" />
                </font>
             </Button>
-            <Button fx:id="btn_5" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" text="5">
+            <Button fx:id="btn_5" mnemonicParsing="false" prefHeight="120.0" prefWidth="120.0" text="5">
                <font>
                   <Font size="36.0" />
                </font>
             </Button>
-            <Button fx:id="btn_6" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" text="6">
+            <Button fx:id="btn_6" mnemonicParsing="false" prefHeight="120.0" prefWidth="120.0" text="6">
                <font>
                   <Font size="36.0" />
                </font>
             </Button>
-            <Button fx:id="btn_1" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" text="1">
+            <Button fx:id="btn_1" mnemonicParsing="false" prefHeight="120.0" prefWidth="120.0" text="1">
                <font>
                   <Font size="36.0" />
                </font>
             </Button>
-            <Button fx:id="btn_2" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" text="2">
+            <Button fx:id="btn_2" mnemonicParsing="false" prefHeight="120.0" prefWidth="120.0" text="2">
                <font>
                   <Font size="36.0" />
                </font>
             </Button>
-            <Button fx:id="btn_3" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" text="3">
+            <Button fx:id="btn_3" mnemonicParsing="false" prefHeight="120.0" prefWidth="120.0" text="3">
                <font>
                   <Font size="36.0" />
                </font>
             </Button>
-            <Button fx:id="btn_0" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" text="0">
+            <Button fx:id="btn_0" mnemonicParsing="false" prefHeight="120.0" prefWidth="120.0" text="0">
                <font>
                   <Font size="36.0" />
                </font>
             </Button>
-            <Button fx:id="btn_dot" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" text=".">
+            <Button fx:id="btn_dot" mnemonicParsing="false" prefHeight="120.0" prefWidth="120.0" text=".">
                <font>
                   <Font size="36.0" />
                </font>
             </Button>
-            <Button fx:id="btn_delete" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" text="C">
+            <Button fx:id="btn_delete" mnemonicParsing="false" prefHeight="120.0" prefWidth="120.0" text="C">
                <font>
                   <Font size="36.0" />
                </font>
@@ -90,7 +90,7 @@
             <Font size="36.0" />
          </font>
       </Label>
-      <Label fx:id="lb_peopleAmt" layoutX="865.0" layoutY="169.0" text="2">
+      <Label fx:id="lb_peopleAmt" layoutX="865.0" layoutY="169.0" text="2" textFill="BLUE">
          <font>
             <Font size="36.0" />
          </font>
@@ -100,7 +100,7 @@
             <Font size="36.0" />
          </font>
       </Label>
-      <Label fx:id="lb_totalPrice" layoutX="325.0" layoutY="262.0" text="200 Baht.">
+      <Label fx:id="lb_totalPrice" layoutX="325.0" layoutY="262.0" text="200 Baht." textFill="BLUE">
          <font>
             <Font size="36.0" />
          </font>
@@ -110,7 +110,7 @@
             <Font size="36.0" />
          </font>
       </Label>
-      <Label fx:id="lb_eachPrice" layoutX="325.0" layoutY="354.0" text="200 Baht.">
+      <Label fx:id="lb_eachPrice" layoutX="325.0" layoutY="354.0" text="200 Baht." textFill="BLUE">
          <font>
             <Font size="36.0" />
          </font>
@@ -125,12 +125,12 @@
             <Font size="36.0" />
          </font>
       </Label>
-      <TextField fx:id="tf_receive" alignment="CENTER_RIGHT" layoutX="325.0" layoutY="431.0" prefHeight="77.0" prefWidth="367.0">
+      <TextField fx:id="tf_receive" alignment="CENTER_RIGHT" layoutX="325.0" layoutY="431.0" prefHeight="77.0" prefWidth="367.0" promptText="0.00">
          <font>
             <Font size="36.0" />
          </font>
       </TextField>
-      <TextField fx:id="tf_change" alignment="CENTER_RIGHT" editable="false" layoutX="325.0" layoutY="577.0" prefHeight="77.0" prefWidth="367.0" style="-fx-background-color: #D0D3D4;">
+      <TextField fx:id="tf_change" alignment="CENTER_RIGHT" editable="false" layoutX="325.0" layoutY="577.0" prefHeight="77.0" prefWidth="367.0" promptText="0.00" style="-fx-background-color: #D0D3D4;">
          <font>
             <Font size="36.0" />
          </font>
@@ -150,7 +150,7 @@
             <Font size="36.0" />
          </font>
       </Label>
-      <Label fx:id="lb_package" layoutX="865.0" layoutY="93.0" text="Panda">
+      <Label fx:id="lb_package" layoutX="865.0" layoutY="93.0" text="Panda" textFill="BLUE">
          <font>
             <Font size="36.0" />
          </font>
